# filebrowser

./: .bumpversion.cfg  README.MD  README.md  pyproject.toml  requirements.txt  start.py  start.spec
filebrowser/: __init__.py  __main__.py  file.py  file_model.py  main.ui  main_window.py
tests/: test_filebrowser.py
