[tool.poetry]
name = "filebrowser"
version = "0.1.0"
description = ""
authors = ["Matthias Maisch <matthias@maisch.me>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.8"
PyQt5 = "^5.15.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pyinstaller = "^4.0"
bump2version = "^1.0.0"

[tool.poetry.scripts]
start = "filebrowser:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
